# langchain-guide

./: .env  .gitignore  10.custom-tool.py  12.client.py  12.server.py  13.few-shot-promp.py  13.hyde.py  13.parent-document-retriever.py  13.partial-function-promp.py  13.partial-promp.py  13.semantic-few-shot.py  14.PairwidesEvaluation.py  14.criteriaEvaluation.py  14.exactMatchStringEvaluator.py  14.stringDistanceEvaluator.py  2.chat-prompt-template.py  2.model.py  2.output-parser-comma.py  2.output-parser-json.py  2.prompt-template.py  3.chain-lcel.py  3.chain-old.py  4.runnable-complex.py  4.runnable-parallel.py  4.runnable-pass-throught.py  4.runnable.py  5.loader-pdf.py  5.loader-text.py  5.loader-web.py  5.text-recursive-splitter.py  5.text-splitter.py  6.embedding-huggingface.py  6.embedding-openai.py  6.pipeline-store.py  6.vector-chroma.py  6.vector-store-search.py  7.rag.py  7.retriever.py  8.memory-llm.py  8.memory.py  (+5 more)
data/: my_document.txt
sesions/: readme.md
sesions/1/: 1.md  2.md
sesions/2/: 3.md  4.md
sesions/3/: 5.md  6.md  7.md
sesions/4/: 10.md  8.md  9.md
sesions/5/: 11.md  12.md
sesions/6/: 13.md  14.md
